@startuml
'https://plantuml.com/class-diagram

class JacksonObjectMapper{
    + {static} DEFAULT_DATE_TIME_FORMATTER: DateTimeFormatter
    + {static} DEFAULT_DATE_FORMATTER: DateTimeFormatter
    + {static} DEFAULT_TIME_FORMATTER: DateTimeFormatter

    + JacksonObjectMapper()
}
JacksonObjectMapper <.. WebMvcConfig

class WebMvcConfigurationSupport{}
WebMvcConfigurationSupport <|-- WebMvcConfig

class WebMvcConfig{
    + extendMessageConverters(List<HttpMessageConverter<?>> converters): void
}

@enduml